--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -18,8 +18,10 @@
   
     transform: rotate(0);
     transition: .3s ease;
+
+    z-index: 1;
   }
   
-  .CreateTodoButton:hover {
+.active {
     transform: rotate(224deg);
-  }
+}
